# gjgr

./: .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  LICENSE  README.md  pom.xml  readme.ipynb
abstract/: pom.xml
content/monkey/monkey-clever/arithemtic4c/: .gitignore  CMakeLists.txt  README.md  run.cpp
content/monkey/monkey-clever/arithemtic4c/demo/: CMakeLists.txt
content/monkey/monkey-clever/arithemtic4c/lib/nqueen/: 遗传算法可满足问题设计.doc
content/monkey/monkey-clever/arithemtic4c/src/acm/hdu/: 3601.cpp  3602.cpp
content/monkey/monkey-clever/arithemtic4c/src/ai/N-Queen/: Genetic.cpp  Genetic.h  MinConflict.cpp  MinConflict.h  NQueensBacktrack.cpp  NQueensBacktrack.h  main.cpp
content/monkey/monkey-clever/arithemtic4c/src/exam/: problem1.cpp  problem2.cpp  problem3.cpp  problem4.c
content/monkey/monkey-clever/arithemtic4c/src/exam/360/: code.cpp  readme.md
content/monkey/monkey-clever/arithemtic4c/src/exam/neteasy/: readme.md
content/monkey/monkey-clever/arithemtic4c/src/tree/: Closest Pair -Full.cpp  Closest Pair Simple.cpp  Closest Pair.cpp  Dijkstra-1.c  Dijkstra-2.cpp  Dijkstra.c  Dijkstra.cpp  DisjSets.c  Full Permutation.c  Full Permutation.cpp  Genetic Algorithms - 8 Queen-1.cpp  Genetic Algorithms - 8 Queen-2.c  Genetic Algorithms - 8 Queen-2.cpp  Genetic Algorithms - 8 Queen.c  Genetic Algorithms - 8 Queen.cpp  Kruskal-min-tree-2.c  Kruskal-min-tree.c  SimpleCombinedSequence.c  SimpleCombinedSequence.cpp  SimpleCombinedSequenceStatic.cpp  SimpleConvexHull.c  Union-Find.c
content/monkey/monkey-clever/arithemtic4c/test/: cal.cpp
(+1596 files in other folders)
